# osprey-atproto

./: .env.example  .envrc  .gitignore  Makefile  README.md  compose.yaml  go.mod  go.sum
.github/workflows/: container-retina.yaml
cmd/converter/: main.go
cmd/effector/: main.go
cmd/enricher/: main.go
cmd/retina/: Dockerfile  README.md  compose.yaml  main.go
converter/: converter.go
effector/: bigquery.go  bigquery_flag.go  effector.go  logger.go  ozone.go  receiver.go  slack.go  slog.go
enricher/: enricher.go
enricher/abyss/: client.go
enricher/appview/: client.go
enricher/cdn/: client.go
enricher/did/: client.go
enricher/flagged-image/: client.go
plugins_atproto/: pyproject.toml
plugins_atproto/src/: register_plugins.py
plugins_atproto/src/input_streams/: kafka_input_stream.py
plugins_atproto/src/output_sinks/: kafka_output_sink.py
plugins_atproto/src/rpc/: bus_pb2.py  bus_pb2.pyi  osprey_atproto_pb2.py  osprey_atproto_pb2.pyi
plugins_atproto/src/shared/: metrics.py
plugins_atproto/src/udfs/atproto/: atproto.py  atproto_acknowledge.py  atproto_comment.py  atproto_email.py  atproto_escalate.py  atproto_label.py  atproto_report.py  atproto_tag.py  atproto_takedown.py
plugins_atproto/src/udfs/atproto/lib/: audit_log.py  did_doc.py
plugins_atproto/src/udfs/std/: cache.py  censorize.py  concat.py  list.py  log.py  text.py  timestamp_age.py
proto/: buf.gen.yaml  buf.yaml  bus.proto  osprey_atproto.proto
proto/go/: bus.pb.go  (+1 more)
retina/: handler.go  image.go  metrics.go  ocr.go  pdq.go  retina.go
rules_atproto/: README.md  main.sml
(+36 files in other folders)
